# Physics_Project

./: .gitignore  CMakeLists.txt  HowToCompile.txt  HowToCompileTiger.txt  Makefile.mac  Makefile.macm68k  README.md  eprintf_stub.c  main.c  main.cpp
SDL12_mac/: Makefile.mac  Makefile.maccarbon  Makefile.macm68k
SDL12_mac/src/timer/macos/: SDL_MPWtimer.c
demos/arm64/Physics_Project_11_0.app/Contents/: Info.plist
demos/arm64/Physics_Project_11_0.app/Contents/Frameworks/: libSDL-1.2.0.dylib  libSDL2-2.0.0.dylib
demos/arm64/Physics_Project_11_0.app/Contents/MacOS/: Physics_Project_11_0
demos/i386/Physics_Project_10_4.app/Contents/: Info.plist
demos/i386/Physics_Project_10_4.app/Contents/MacOS/: Physics_Project_10_4
demos/powerpc/: PhysicsProjectPPC.APPL
demos/x86_64/Physics_Project_10_7.app/Contents/: Info.plist
demos/x86_64/Physics_Project_10_7.app/Contents/Frameworks/: libSDL-1.2.0.dylib  libSDL2-2.0.0.dylib
demos/x86_64/Physics_Project_10_7.app/Contents/MacOS/: Physics_Project_10_7
lib/: libSDL2-2.0.0.dylib
lib_10_15/: libSDL-1.2.0.dylib  libSDL2-2.0.0.dylib
library_sources/SDL-1.2/test-build/: CMakeCache.txt
